--- a/Examples/ChainSaw/ChainSaw.Server/ChainSaw.Server.csproj
+++ b/Examples/ChainSaw/ChainSaw.Server/ChainSaw.Server.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MQTTnet" Version="2.7.1" />
+  </ItemGroup>
+
 </Project>
