--- a/Examples/ChainSaw/ChainSaw.Server/ChainSaw.Server.csproj
+++ b/Examples/ChainSaw/ChainSaw.Server/ChainSaw.Server.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="MQTTnet" Version="2.7.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ChainSaw.Shared\ChainSaw.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
