--- a/Examples/ChainSaw/ChainSaw.Server/ChainSaw.Server.csproj
+++ b/Examples/ChainSaw/ChainSaw.Server/ChainSaw.Server.csproj
@@ -6,6 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.0.2" />
     <PackageReference Include="MQTTnet" Version="2.7.1" />
   </ItemGroup>
 
