--- a/Examples/ChainSaw/ChainSaw.Client.Console/ChainSaw.Client.Console.csproj
+++ b/Examples/ChainSaw/ChainSaw.Client.Console/ChainSaw.Client.Console.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="MQTTnet" Version="2.7.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
   <ItemGroup>
