--- a/Examples/ChainSaw/ChainSaw.Server/ChainSaw.Server.csproj
+++ b/Examples/ChainSaw/ChainSaw.Server/ChainSaw.Server.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.0.2" />
     <PackageReference Include="MQTTnet" Version="2.7.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
   <ItemGroup>
