Simple test added

--- a/SigmaSharp.SharpChain.Tests/SigmaSharp.SharpChain.Tests.csproj
+++ b/SigmaSharp.SharpChain.Tests/SigmaSharp.SharpChain.Tests.csproj
@@ -52,10 +52,17 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BasicChainTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Lib\SigmaSharp.SharpChain\SigmaSharp.SharpChain.csproj">
+      <Project>{54232655-98e5-4901-967e-6d4534252c8e}</Project>
+      <Name>SigmaSharp.SharpChain</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
