--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 version: 1.0.{build}
 image: Visual Studio 2017
 before_build:
-- cmd: dotnet restore
+- cmd: msbuild /t:restore
 build:
   verbosity: minimal
