--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,10 @@
 version: 1.0.{build}
+branches:
+  only:
+  - master
 image: Visual Studio 2017
 before_build:
 - cmd: nuget restore SharpChain.sln
 build:
+  project: SharpChain.sln
   verbosity: minimal
