--- a/Lib/SigmaSharp.SharpChain/SigmaSharp.SharpChain.csproj
+++ b/Lib/SigmaSharp.SharpChain/SigmaSharp.SharpChain.csproj
@@ -10,10 +10,11 @@
     <PackageReleaseNotes>This is still preliminary versions. More complete code on it's way.</PackageReleaseNotes>
     <PackageLicenseUrl>https://github.com/sehd/SharpChain/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/sehd/SharpChain</PackageProjectUrl>
-    <PackageTags>Blockchain Chain Block-Chain</PackageTags>
+    <PackageTags>Blockchain, Chain, Block-Chain</PackageTags>
     <Copyright>Ⓒ 2018 Emad Hosseini</Copyright>
     <Product>SharpChain</Product>
-    <PackageIconUrl>https://github.com/sehd/SharpChain/blob/master/icon.png</PackageIconUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/sehd/SharpChain/master/icon.png</PackageIconUrl>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
