--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,3 +8,8 @@ before_build:
 build:
   project: SharpChain.sln
   verbosity: minimal
+deploy:
+  provider: NuGet
+  api_key:
+    secure: wS/QhWwmJ8nzLttzgcRN9H1DYYVS/ZcdWW4KENbTqYxZP+zZChkhIOUOr4bgTqND
+  skip_symbols: false
