AppVeyor nuget test

--- a/Lib/SigmaSharp.SharpChain/SigmaSharp.SharpChain.csproj
+++ b/Lib/SigmaSharp.SharpChain/SigmaSharp.SharpChain.csproj
@@ -15,6 +15,7 @@
     <Product>SharpChain</Product>
     <PackageIconUrl>https://raw.githubusercontent.com/sehd/SharpChain/master/icon.png</PackageIconUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
